5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1577_1326.log
== SUBMITION (2019-03-30 17:35:58) 
-- CODE:
valor:"75"
	print("valor")
-- EXECUTION TIME:
0.196957
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    valor:"75"
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:36:59) 
-- CODE:
valor(75)
	print("valor")
-- EXECUTION TIME:
0.136407
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 2
    print("valor")
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:37:33) 
-- CODE:
valor("75")
	print("valor")
-- EXECUTION TIME:
0.123869
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 2
    print("valor")
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:37:49) 
-- CODE:
valor=("75")
	print("valor")
	
-- EXECUTION TIME:
0.138365
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 2
    print("valor")
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:39:26) 
-- CODE:
valor="75"
	print("valor")
	
-- EXECUTION TIME:
0.152064
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 2
    print("valor")
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:39:31) 
-- CODE:
valor="75"
	print("valor")
	
-- EXECUTION TIME:
0.205673
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 2
    print("valor")
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:41:27) 
-- CODE:
valortotal="40+35=75"
print(valortotal)
	
-- EXECUTION TIME:
0.20177
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40+35=75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:41:50) 
-- CODE:
valortotal="40+35=75"
print("valortotal")
	
-- EXECUTION TIME:
0.134793
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
valortotal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:42:00) 
-- CODE:
valortotal="75"
print("valortotal")
	
-- EXECUTION TIME:
0.196421
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
valortotal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:42:04) 
-- CODE:
valortotal="75"
print("valortotal")
	
-- EXECUTION TIME:
0.138835
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
valortotal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:01:50) 
-- CODE:
print(40+35)
	
-- EXECUTION TIME:
0.124057
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
